[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remotior_sensus"
dynamic = ["version"]
authors = [
  { name="Luca Congedo", email="ing.congedoluca@gmail.com" },
]
description = "Remotior Sensus is software to process remote sensing and GIS data"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
"Homepage" = "https://github.com/semiautomaticgit/remotior_sensus"
"Bug Tracker" = "https://github.com/semiautomaticgit/remotior_sensus/issues"

[tool.hatch.version]
path = "src/remotior_sensus/__init__.py"

[tool.hatch.build]
exclude = [
  "*.idea",
  "*.git",
  "*build",
]